--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,9 @@
   
 }
 
+:root{
+  --purple: #5e2a76;
+}
 
 
 html {
